--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -136,13 +136,12 @@ jobs:
   
       - name: Wait for services
         run: |
-          echo "Waiting for frontend..."
-          timeout=0
-          until curl -f http://localhost:3000 || [ $timeout -ge 60 ]; do sleep 5; timeout=$((timeout+5)); done
-      
-          echo "Waiting for backend..."
-          timeout=0
-          until curl -f http://localhost:8080/actuator/health || [ $timeout -ge 60 ]; do sleep 5; timeout=$((timeout+5)); done
+          # Backend
+          until curl -f http://localhost:8080/actuator/health; do sleep 5; done
+          
+          # Frontend
+          until curl -f http://localhost:3000; do sleep 5; done
+
   
       - name: Install Node.js
         uses: actions/setup-node@v4
